2005-08-30  Andrew Cagney  <cagney@redhat.com>

	* com/redhat/fedora/frysk/proc/TaskState.java: Rename state "dead"
	to "destroyed".
	* com/redhat/fedora/frysk/proc/TestRefresh.java: Update.

	* com/redhat/fedora/frysk/proc/TestLib.java,
	com/redhat/fedora/frysk/proc/LinuxHost.java: Update to match
	changes to Wait.java, vis rename wait to waitAll, waitNohang to
	waitAllNoHang, signaled to terminated, and zombied to disappeared.

	* com/redhat/fedora/frysk/proc/TestProcGet.java: Add
	testGetCommand.
	* com/redhat/fedora/frysk/proc/Proc.java: Make getCommand abstract.
	* com/redhat/fedora/frysk/proc/LinuxProc.java: Add getStat and
	getCommand.

2005-08-30  Jeff Johnston  <jjohnstn@redhat.com>

	* com/redhat/fedora/frysk/proc/TestLib.java (tearDown): Add
	comments regarding use of SIGCONT.

2005-08-30  Andrew Cagney  <cagney@redhat.com>
	
	* prog/kill/zombie.c: When the child detects that the parent
	has exited, notify the manager.
	* com/redhat/fedora/frysk/proc/TestLib.java: Add
	ZombieChild.fryParent.
	* com/redhat/fedora/frysk/proc/LinuxProc.java: Don't crash when a
	process has no tasks.
	* com/redhat/fedora/frysk/proc/LinuxHost.java: Handle a process
	becomming a daemon (re-parenting).  Refresh all processes not just
	the added ones.
	* com/redhat/fedora/frysk/proc/TestRefresh.java: Add
	testRefreshDaemon.

2005-08-29  Andrew Cagney  <cagney@redhat.com>

	* com/redhat/fedora/frysk/proc/TestRefresh.java: Add
	"testParentChild".
	* com/redhat/fedora/frysk/proc/Proc.java: Add constructor
	parameterized by Host, ProcId, and Stat.
	* com/redhat/fedora/frysk/proc/LinuxHost.java: Add "updateProc".
	Use LinuxProc.Stat to get the parent ID.  Update a process parent
	first.
	* com/redhat/fedora/frysk/proc/LinuxProc.java: Add "Stat".  Add
	constructor parameterized by Host, ProcId, and Stat.
	
	* com/redhat/fedora/frysk/proc/Linux.java: Break up.
	* com/redhat/fedora/frysk/proc/LinuxProc.java: New.
	* com/redhat/fedora/frysk/proc/LinuxTask.java: New.